# orgpedia

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  mkdocs.yml  pyproject.toml
orgpedia/components/: __init__.py  archive_checker.py  details_differ.py  details_merger.py  doc_translator.py  extract_order_number.py  hindi_order_builder.py  hindi_order_tagger.py  id_assigner.py  id_assigner_fields.py  id_assigner_vocab.py  infer_table_headers.py  meta_writer.py  order_builder.py  order_tagger.py  para_finder.py  para_name_finder.py  pdforder_builder.py  pdfpost_parser.py  post_parser.py  table_order_builder.py  tenure_builder.py  tenure_writer.py  text_writer.py  website_details.py  website_gen.py  website_lang_gen.py
orgpedia/extracts/: orgpedia.py
orgpedia/tools/: cli.py  data_package.py  entity_finder.py  flow.py  gen_officeryml.py  merge_wikinames.py  name_finder.py  name_parser.py  op.py  post_parser.py  post_parser2.py
orgpedia/tools/Old/: merge_wikinames.py
tests/: conf  end2end.yml  ips_officerIDs.json  orderBuilder.yml  rps_officerIDs.json  test_end2end.py  test_name_parser.py
